# Civet-Cafe

./: .env.example  .gitignore  README.md
backend/: .env.example  Procfile  alembic.ini  pyproject.toml  railway.json
backend/alembic/: env.py
backend/alembic/versions/: 20260629_0001_initial_schema.py  20260629_0002_add_refresh_tokens.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: admin.py  auth.py  billing.py  health.py  menu.py  orders.py  reports.py  router.py  tables.py
backend/app/core/: __init__.py  config.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  audit_log.py  auth.py  billing.py  menu.py  mixins.py  order.py  rbac.py  setting.py  table.py  user.py
backend/app/repositories/: admin.py  billing.py  menu.py  orders.py  rbac.py  refresh_tokens.py  reports.py  tables.py  users.py
backend/app/schemas/: auth.py  billing.py  menu.py  orders.py  reports.py  settings.py  tables.py  users.py
backend/app/services/: admin.py  auth.py  billing.py  menu.py  orders.py  reports.py  security.py  supabase_auth.py  tables.py
backend/scripts/: seed.py
backend/tests/: conftest.py  test_admin_contract.py  test_admin_service.py  test_auth_contract.py  test_auth_service.py  test_billing_contract.py  test_billing_service.py  test_menu_contract.py  test_menu_service.py  test_orders_contract.py  test_orders_service.py  test_reports_contract.py  test_reports_service.py  test_schema_contract.py  test_tables_contract.py  test_tables_service.py
docs/: API_SPEC.md  ARCHITECTURE.md  BRAIN.md  TASKS.md  (+6 more)
(+73 files in other folders)
